src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;

  h1 {
    margin-top: 2vh;
    margin-bottom: 3vh;
    font-family: "JetBrains Mono", serif;
    font-size: 1.6rem;
    text-align: center;
  }

  .searchRecipeFormField {
    width: 70%;
  }
}

.action {
  width: 5%;
  padding-right: 6px !important;
}

.tableContainer {
  height: 85%;
  width: 90%;

  table {
    width: 100%;
    overflow-y: auto;
    text-align: center;
  }
}

@media screen and (max-width: 1300px) {
  .tableContainer {
    height: 81%;
  }
}

@media screen and (max-width: 1630px) {
  .tableContainer {
    height: 81%;
  }
}

